More changes to pictures

--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -307,7 +307,7 @@ In this subsection the impact of the inclusion of the new triggers to the total 
   \label{fig:Res_Theta_2}
 \end{figure}
 
-Fig.~\ref{fig:Rec_Theta_comp} shows the comparison for reconstructed zenith angle distributions for the CC and NC channels. The blue histogram is the sample with both the new triggers and old triggers included while the red histogram is the sample with only the old triggers active. The distributions look very similar other than the higher number of events in the tails for the sample with new triggers. This increase is more significant for CC in comparison to NC channel since the inclusion of new triggers adds more overall events to the CC channel in comparison to NC. A worsening of the residual is also seen in Fig.~\ref{sub:fig:Res_theta_CC_comp} but as mentioned before is corrected with the reduced $\chi^2/{\text{ndf}} = \chi^2_{\text{red}}$ or goodness of fit cut. 
+Fig.~\ref{fig:Rec_Theta_comp} shows the comparison for reconstructed zenith angle distributions for the CC and NC channels. The blue histogram is the sample with both the new triggers and old triggers included while the red histogram is the sample with only the old triggers active. The distributions look very similar other than the higher number of events in the tails for the sample with new triggers. This increase is more significant for CC in comparison to NC channel since the inclusion of new triggers adds more overall events to the CC channel in comparison to NC. A worsening of the residual is also seen in Fig.~\ref{sub:fig:Res_theta_CC_comp} but as mentioned before is corrected with the $\chi^2/{\text{ndf}} = \chi^2_{\text{red}}$ or goodness of fit cut. 
 The individual contribution of the MoPS and ToTd to the reconstructed theta for all channels in the energy range E$=10^{17}-10^{18.5}$eV is shown in Fig.~\ref{sub:fig:Rec_theta_CC_trig}. It can be clearly seen that both ToTd and MoPS contribute to the higher extended tails. The contribution of MoPS is higher than that of ToTd. The magnitude difference can also be due to higher number of stations with MoPS (2x) in comparison to ToTd.
 
 The angular bias and the evolution of angular resolution with energy, slant depth and MC zenith angle is shown in figures.~\ref{sub:fig:Res_E_comp},~\ref{sub:fig:Res_theta_comp} and \ref{sub:fig:Res_Slant_comp} respectively. The angular bias is usually small within $\sim 2^{\circ}$ and is comparable to the one observed in the sample with only old triggers. The resolution seems to improve with energy and worsens with the injected slant depth which is as expected. The variable used for discrimination, AoP of all the T5 stations is also compared in Fig.~\ref{sub:fig:AoP_comp}. No significant differences are observed between the two samples. 
@@ -410,7 +410,7 @@ After finding the weight vector, the projected data for each sample is given as 
 
 \begin{figure}[t!]
   \centering
-  \includegraphics[width=0.9\textwidth]{thesis_figures/Nu_analysis/Selection_Evo_AoP_hist_wnt_redcut.pdf}
+  \includegraphics[width=0.85\textwidth]{thesis_figures/Nu_analysis/Selection_Evo_AoP_hist_wnt_redcut.pdf}
   \caption{Histogram of Area over Peak of all stations that pass the pre-selection cuts. The distribution of the background training sample is represented in red while for the CC neutrino sample is represented in green.}
   \label{fig:AoP_hist}
 \end{figure}
@@ -421,14 +421,14 @@ It is really important to find the correct features or variables to train the al
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=\textwidth]{thesis_figures/Nu_analysis/Selection_Evo_AoP_Time_mean_CC_redcut.pdf}
+  \includegraphics[width=0.95\textwidth]{thesis_figures/Nu_analysis/Selection_Evo_AoP_Time_mean_CC_redcut.pdf}
   \caption{Distribution of the Area over Peak of all stations as a function of their relative time to the core for all events in the background training sample that pass the pre-selection cuts. The background sample is represented by the red points while the CC neutrino sample is represented by the green points. The error bars represent the spread of the distribution.}
   \label{fig:Time_to_core}
 \end{figure}
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=\textwidth]{thesis_figures/Nu_analysis/Selection_Evo_AoP_Dist_mean_CC_redcut.pdf}
+  \includegraphics[width=0.95\textwidth]{thesis_figures/Nu_analysis/Selection_Evo_AoP_Dist_mean_CC_redcut.pdf}
   \caption{Distribution of the Area over Peak of all stations as a function of their projected distance to the core for all events in the background training sample that pass the pre-selection cuts. The background sample is represented by the red points while the CC neutrino sample is represented by the green points. The error bars represent the spread of the distribution.}
   \label{fig:Dist_to_core}
 \end{figure}
